# fastapi-template

./: .dist.env  .flake8  .gitignore  .gitpod.yml  CHANGELOG.MD  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: github-ci.yaml
app/: __init__.py  main.py  manage.py
app/api/: api.py  servicesfac.py
app/api/endpoints/: routes_rdbms_conn.py  routes_users.py
app/core/: config.py  db.py  gunicorn_conf.py  prestart.sh
app/domain/rdbms_connections/: rdbms_connections_schema.py  rdbms_connections_service.py
app/domain/users/: users_schema.py  users_service.py
app/infrastructure/database/migrations/: database-schema.sql
app/infrastructure/database/models/: sqla_tables.py
app/infrastructure/database/queries/: rdbms_connection.py  user.py
app/routes/: api.py
app/routes/endpoints/: routes_rdbms_conn.py  routes_users.py
app/tasks/: messaging.py
app/utils/: database_crud.py  exception_handlers.py  exceptions.py  exceptions_http.py  exceptions_internal.py  lifecycle.py  middleware.py  migrations.py  utils.md
docker/: Dockerfile
scripts/: clean.sh  done.sh  lint.sh
setup/docker/: docker-compose.local.yml  docker-compose.yml
tests/: conftest.py
tests/routes/: test_user.py
